<resources>
    <string name="app_name" translatable="false">Sharwaa</string>
    <string name="there_are_no_chats">There are no chats</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="sar">SAR</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="text_alert">Alert</string>
    <string name="text_are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="text_are_must_login_to_continue">You must login to continue</string>
    <string name="block_massage">Your account has been blocked or deleted. In the event of an error, please contact the application administration.</string>
    <string name="error_timeout">Timeout, please try again</string>
    <string name="error_unknown">Something went wrong, please try again</string>
    <string name="error_server">Something went wrong, please try again later</string>
    <string name="error_not_found">Something went wrong, please try again later</string>
    <string name="error_connection">No internet connection</string>
    <string name="error_unauthorized">UnAuthorized user</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_name">Invalid user name</string>
    <string name="error_invalid_provider_name">Invalid provider name</string>
    <string name="error_invalid_shop_image">Invalid shop image</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_old_password">Invalid old password</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_invalid_files">Invalid files</string>
    <string name="error_invalid_confirmation_password">Invalid confirmation password</string>
    <string name="error_invalid_password_identical">Invalid password Identical</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_device_id">Invalid device id</string>
    <string name="error_invalid_verification_code">Please enter the verification code before confirm</string>
    <string name="big_text">This text is an example of a text that can be replaced in the same space
        this text was generated from the Arabic text generator
        this text is an example of text that can be replaced in the same space
        this text was generated from the Arabic text generator
        this text is an example of a text that can be replaced To replace in the same space
        it has been taken over</string>
    <string name="copied">Copied</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="send">Send</string>
    <string name="no_data">No data to retrieve</string>
    <string name="write_message">Write message</string>
    <string name="some_content" translatable="false">Write message Write messageWrite messageWrite messageWrite messageWrite messageWrite message</string>
    <string name="skip">Skip</string>
    <string name="contracting" translatable="false">Contracting</string>
    <string name="next">Next</string>
    <string name="_965">+965</string>
    <string name="_00_30" translatable="false">00:30</string>
    <string name="welcome_back">welcome back</string>
    <string name="sign_in">sign in</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <string name="forget_password">forget password?</string>
    <string name="have_no_account">have no account?</string>
    <string name="sign_up">sign up</string>
    <string name="confirm_phone_number">confirm phone number</string>
    <string name="confirm_header_desc">You need to enter a 4-digit code sent to a number</string>
    <string name="confirm">confirm</string>
    <string name="the_code_will_be_sent_back">The code will be sent back</string>
    <string name="second">second</string>
    <string name="username">username</string>
    <string name="you_have_account">you have account ?</string>
    <string name="update_my_data">update my data</string>
    <string name="name">name</string>
    <string name="edit_my_data">edit my data</string>
    <string name="change">change</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="our_offers">Our Offers</string>
    <string name="companies">Companies</string>
    <string name="my_profile">My Profile</string>
    <string name="_965_6479_46464" translatable="false">+965 6479 46464</string>
    <string name="_30" translatable="false">30</string>
    <string name="learn_how_to_build">how to\nbuild</string>
    <string name="edit_nmy_profile">edit\nmy profile</string>
    <string name="my_orders">my orders</string>
    <string name="saved_addresses">saved addresses</string>
    <string name="common_questions">common questions</string>
    <string name="notifications">notifications</string>
    <string name="language">language</string>
    <string name="app_share">application share</string>
    <string name="about_app">about application</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="support">support</string>
    <string name="join_us">join us</string>
    <string name="add_another_address">Add another address</string>
    <string name="edit">Edit</string>
    <string name="arabic_lang">Arabic Language</string>
    <string name="english_lang">English Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="what_is_your_reason_for_contacting_us">What is your reason for contacting us</string>
    <string name="complaint_title">complaint title</string>
    <string name="message_description">message description</string>
    <string name="company_or_store_name">Company or store name</string>
    <string name="email">Email</string>
    <string name="company_address">company address</string>
    <string name="add_commercial_register_picture">Add Commercial Register Picture</string>
    <string name="reset_password">reset password</string>
    <string name="activation_code_will_be_sent_to_the_phone">activation code will be sent to the phone</string>
    <string name="new_password">new password</string>
    <string name="enter_new_password">enter new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="my_current_orders">my current orders</string>
    <string name="my_previous_orders">my previous orders</string>
    <string name="shipments_colon">shipments :</string>
    <string name="order_date_colon">order date :</string>
    <string name="total_colon">total :</string>
    <string name="show_all_products">show all products</string>
    <string name="seller_colon">seller :</string>
    <string name="start">start</string>
    <string name="Code_has_been_sent_back">Code has been sent back</string>
    <string name="select">select</string>
    <string name="choose_location">choose location</string>
    <string name="send_join_request">send join request</string>
    <string name="logout">logout</string>
    <string name="old_password">old password</string>
    <string name="change_password">change password</string>
    <string name="companies_and_suppliers">companies and suppliers</string>
    <string name="best_sellers">best sellers</string>
    <string name="our_choice">our choice</string>
    <string name="search_for_products">search for products…</string>
    <string name="filter">filter</string>
    <string name="choose_size">choose size</string>
    <string name="additions">additions</string>
    <string name="delivery_cost">delivery cost</string>
    <string name="delivered_in">delivered in</string>
    <string name="free_shipment_desc"><font fgcolor='#F69502'>Free shipping</font> order 500 or more To become eligible for free shipping</string>
    <string name="it_is_not_possible_to_order_less_than_the_specified_quantity">It is not possible to order less than the specified quantity</string>
    <string name="eligible_for_free_shipping">Eligible for free shipping</string>
    <string name="five" translatable="false">5</string>
    <string name="description">description</string>
    <string name="add_to_cart">add to cart</string>
    <string name="similar_products">similar products</string>
    <string name="separator" translatable="false">/</string>
    <string name="one" translatable="false">1</string>
    <string name="_24_square_meter" translatable="false">24 square meter</string>
    <string name="_30000_d_k" translatable="false">(30000 d.k)</string>
    <string name="zero" translatable="false">0</string>
    <string name="save_address">save address</string>
    <string name="choose_your_location_on_map">choose your location on map</string>
    <string name="address_details">address details</string>
    <string name="house">house</string>
    <string name="work">work</string>
    <string name="address_name">address name</string>
    <string name="government">government<font color="#DF1A2B"> * </font></string>
    <string name="area">area<font color="#DF1A2B"> * </font></string>
    <string name="district">district<font color="#DF1A2B"> * </font></string>
    <string name="street">street</string>
    <string name="building">building</string>
    <string name="floor">floor</string>
    <string name="extra_instructions">extra instructions</string>
    <string name="alley">alley</string>
    <string name="flat_number">flat number</string>
    <string name="add_new_address">add new address</string>
    <string name="edit_address">edit address</string>
    <string name="there_are_no_offers">there are no offers</string>
    <string name="there_are_no_notifications">there are no notifications</string>
    <string name="there_are_no_products">there are no products</string>
    <string name="there_are_no_filters">there are no filters</string>
    <string name="products_for_this_seller">products for this seller</string>
    <string name="reset">reset</string>
    <string name="filter_results">filter results</string>
    <string name="search_for">search result for</string>
    <string name="to">to</string>
    <string name="do_order">order</string>
    <string name="free_shipping"><font fgcolor='#F69502'>Free shipping</font></string>
    <string name="free_shipping_continue">or more To become eligible for free shipping</string>
    <string name="watches">watches</string>
    <string name="invalid_location">invalid location</string>
    <string name="invalid_address_name">invalid address name</string>
    <string name="invalid_government">invalid government</string>
    <string name="invalid_region">invalid region</string>
    <string name="invalid_piece">invalid piece</string>
    <string name="invalid_street">invalid street</string>
    <string name="invalid_building">invalid building</string>
    <string name="invalid_floor">invalid floor</string>
    <string name="invalid_size">invalid size</string>
    <string name="invalid_product_options">invalid product options</string>
    <string name="invalid_quantity">invalid quantity</string>
    <string name="extras">extras</string>
    <string name="added">Added</string>
    <string name="to_cart">to cart</string>
    <string name="go_to_cart">go to cart</string>
    <string name="go_to_shop">go to shop</string>
    <string name="confirm_order">confirm order</string>
    <string name="total">total</string>
    <string name="cart">cart</string>
    <string name="choices_colon">choices :</string>
    <string name="extras_colon">extras :</string>
    <string name="delivery_address">delivery address</string>
    <string name="review_order_and_payment">review order and payment</string>
    <string name="delivery_chosen_address">delivery chosen address</string>
    <string name="do_you_have_a_coupon_save_now">Do you have a coupon? Save now</string>
</resources>