<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey"
    tools:context=".ui.cycles.auth_cycle.fragment.reser_pass.reset_pass.ResetPasswordFragment">

    <LinearLayout
        android:id="@+id/ln_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_126sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_black"
            android:text="@string/new_password"
            android:textColor="#44A3D8"
            android:textSize="@dimen/_18ssp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa"
            android:text="@string/enter_new_password"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ln_header">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape_white_rounded"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_16sdp"
            android:fontFamily="@font/changa"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingHorizontal="@dimen/_24sdp"
            android:paddingVertical="@dimen/_14sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12ssp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape_white_rounded"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_16sdp"
            android:fontFamily="@font/changa"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_24sdp"
            android:paddingVertical="@dimen/_14sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12ssp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape_white_rounded"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_16sdp"
            android:fontFamily="@font/changa"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_24sdp"
            android:paddingVertical="@dimen/_14sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12ssp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/shape_rounded_gold"
        android:fontFamily="@font/changa"
        android:text="@string/change"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/ln_data"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="13dp" />

</androidx.constraintlayout.widget.ConstraintLayout>