<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.cycles.auth_cycle.fragment.login.LoginFragment">

        <LinearLayout
            android:id="@+id/ln_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_126sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:text="@string/welcome_back"
                android:textColor="#44A3D8"
                android:textSize="@dimen/_18sdp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:text="@string/sign_in"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_18sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/ln_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_white_rounded"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/cairo_medium"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingHorizontal="@dimen/_24sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/shape_white_rounded"
                    android:fontFamily="@font/cairo_semi_bold"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/_965"
                    android:textColor="#44A3D8"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_white_rounded"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_16sdp"
                android:fontFamily="@font/cairo_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_24sdp"
                android:paddingVertical="@dimen/_14sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_12ssp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/forget_password"
            android:textColor="#44A3D8"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ln_data"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape_rounded_gold"
            android:drawableEnd="@drawable/ic_rounded_arrow_right"
            android:fontFamily="@font/changa"
            android:gravity="start|center"
            android:paddingHorizontal="@dimen/_24sdp"
            android:text="@string/sign_in"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_password"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_24sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_light"
                android:text="@string/have_no_account"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/cairo_medium"
                android:text="@string/sign_up"
                android:textColor="#44A3D8"
                android:textSize="@dimen/_12ssp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
